--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,17 +2,14 @@
 <html lang="{{ site.lang | default: "en-US" }}">
   {% include head.html %}
   <body class="bg_black-1">
-    <div class="max-w_90 m_auto flex bg_white shadow_overlap-light">
-      <section class="w_30 p_5  sticky flex_none w_25 self_start t_0">     
-        <div class="logo_primary m-l_n4 m-t_n4"></div>
-        <h1 class="m-y_4"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
-        <a href="https://fontawesome.com/" class="link">Font Awesome Documentation</a>
-      {% if site.github.is_project_page %}
-      <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-      {% endif %}
-      {%- if site.posts.size > 0 -%}
-      <h2 class="m-y_3">{{ page.list_title | default: "Categorization" }}</h4>
+    <div class="max-w_90 m_auto bg_white shadow_overlap-light">
+      <section class="flex flex_row p-b_3 br_solid br-b_1 br_black-1">     
+        <div class="logo_primary m-x_4 m-t_n4 w_20 flex_none"></div>
+        <div class="flex_auto w_20"><h1 class="m-y_4"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+          <p>{{ site.description | default: site.github.project_tagline }}</p></div>
+      <div class="flex_auto w_40 m_4">
+        {%- if site.posts.size > 0 -%}
+      <h2 class="m-y_3">Pages of the DEMO</h4>
       <ul class="ul_none font_1 br-t_1 br_solid br_black-3 m-b_4">
         {%- for post in site.posts -%}
         <li class="p-y_2 p-x_3 block br-b_1 br_solid br_black-3 h:bg_black-2">
@@ -25,36 +22,13 @@
         {%- endfor -%}
       </ul>
       <!-- <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p> -->
+      </div>
     {%- endif -%}
-<div class="m-t_3 m-b_4">
-  <h2 class="m-y_3">Exception Rules</h4>
-  <aside class="br_radius p_3 bg_warning m-b_4">
-    <h3 class="uppercase c_white p-x_4"><i class="fa-layer-group fas font_2 vertical-align_middle"></i> stack</h3>
-    <main class="bg_white p_4 br-br_radius br-bl_radius">
-      <strong class="font_bold">Stacked icons</strong> are a special format from fontawesome that allows for layering one icon on another to make a more complex icon.  This comes with some trade offs between ease of use and what can be acheived. This is an exception to the norm and should be used sparingly and is often used with more complex icons used for products.  <a href="" class="link"> stacked documentation</a>
-    </main>
-  </aside>
-  <aside class="br_radius p_3 bg_highlight m-b_4">
-    <h3 class="uppercase c_white p-x_4"><i class="fa-image fas font_2 vertical-align_middle"></i> illustration</h3>
-    <main class="bg_white p_4 br-br_radius br-bl_radius">
-      <strong class="font_bold">Illustration</strong> are used on icons that have a more flurished look when in a large format or print. The Image reference is used whenever the specific icon is going to be used larger then 150px. This is an exception to the norm and should be used sparingly and is often used with more complex icons used for products. 
-    </main>
-  </aside>
-</div>
-    <footer class="">
-      {%- assign update_date ="Feb 2, 2021"  -%}
-      <strong> last updated: {{ update_date  }}</strong>
-      <p><small>
-        This project is maintained by ACC's Digital Stradegy Team.<br/>
-        Hosted on GitHub Pages</small></p>
-    </footer>
-        
-        
-      </section>
-      <section class="p_4 reading-typography flex_auto float_right p_5 ">
-      {% include search.html %}
-      {{ content }}
-      </section>
+  </section>
+  <main class="p_2 p_4:md">
+    {{ content }}
+  </main>
+
     </div>
     
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
