--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
         {%- if site.posts.size > 0 -%}
       <h2 class="m-y_3">Pages of the DEMO</h4>
       <ul class="ul_none font_1 br-t_1 br_solid br_black-3 m-b_4">
-        {%- for post in site.posts reversed  -%}
+        {%- for post in site.posts -%}
         <li class="p-y_2 p-x_3 block br-b_1 br_solid br_black-3 h:bg_black-2">
           {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
           <!-- <span class="post-meta">{{ post.date | date: date_format }}</span> -->
