--- a/_includes/userInput.html
+++ b/_includes/userInput.html
@@ -7,7 +7,7 @@
       </span>
    </label>
    <div class="input-holder flex self_end">
-      <label for="inputId" class="value-space br_solid br_2 p_3 texture_light flex_shrink c_black-7 bg_black-1 br_black-3">
+      <label for="inputId" class="value-space br_solid br_1 p_3 texture_light flex_shrink c_black-7 bg_black-_05 br_black-1 m-b_0 br-tl_radius br-bl_radius">
          <i class="fas fa-user"></i>
       </label>
       <input data-v-b56e78ec="" id="uniqueTextInputIdIcon" name="uniqueTextInputIdIcon" required="required" type="text" class="br_2 p-y_2 br_solid flex_auto p-l_4 lh_3  c_black bg_white-0 br_black-3  br-l_0"></div>
