--- a/_includes/featureTabFlag.html
+++ b/_includes/featureTabFlag.html
@@ -1,6 +1,6 @@
 <div class="flex flex_row justify_end transition_2 c_white">
     <span
           class="flex_shrink p-y_2 p-x_3 br_1 br_solid br_white-7  bg_primary-1 h:bg_primary-n3"><span
-              class="p-x_2 m-t_1 m-b_2 display_none">recommended</span> <i
+              class="p-x_2 m-t_1 m-b_2">prefered</span> <i
            class="fas fa-fw m-t_1 m-b_2 fa-star"></i></span>
 </div>
