--- a/_includes/userInput.html
+++ b/_includes/userInput.html
@@ -1,14 +1,14 @@
-<div class="question font_ui">
+<div class="question font_ui  m-b_4">
    <label for="uniqueTextInputIdIcon" class="label-holder flex font-size_up font_medium p-y_2 m-b_0">
-      <span class="text cell flex_shrink">User Name
+      <span class="text cell flex_shrink">Username
       </span>
       <span class="required-holder flex_shrink font_n5">
          <i class="fas fa-asterisk c_warning  vertical-align_top"></i>
       </span>
    </label>
    <div class="input-holder flex self_end">
-      <label for="inputId" class="value-space br_solid br_1 p_3 flex_shrink c_black-7 bg_black-_05 br_black-3 m-b_0 br-tl_radius br-bl_radius texture_light">
-         <i class="fas fa-user"></i>
+      <label for="inputId" class="value-space br_solid br_1 p_3 flex_none c_black-7 bg_black-_05 br_black-3 m-b_0 br-tl_radius br-bl_radius texture_light">
+         <i class="fas fa-user fa-fw"></i>
       </label>
       <input data-v-b56e78ec="" id="uniqueTextInputIdIcon" name="uniqueTextInputIdIcon" required="required" type="text" class="br_1 p-y_2 br_solid flex_auto p-l_4 lh_3  c_black bg_white-0 br_black-3  br-l_0 br-tr_radius br-br_radius shadow_emboss-light"></div>
       <div class="font-size_down"></div>
