--- a/_includes/passwordInput.html
+++ b/_includes/passwordInput.html
@@ -1,4 +1,4 @@
-<div class="question font_ui">
+<div class="question font_ui m-b_4">
     <label for="uniqueTextInputIdIcon" class="label-holder flex font-size_up font_medium p-y_2 m-b_0">
        <span class="text cell flex_shrink">Password
        </span>
@@ -7,11 +7,12 @@
        </span>
     </label>
     <div class="input-holder flex self_end">
-       <label for="inputId" class="value-space br_solid br_1 p_3 flex_shrink c_black-7 bg_black-_05 br_black-3 m-b_0 br-tl_radius br-bl_radius texture_light">
-          <i class="fas fa-user"></i>
+       <label for="inputId" class="value-space br_solid br_1 p_3 flex_none c_black-7 bg_black-_05 br_black-3 m-b_0 br-tl_radius br-bl_radius texture_light">
+          <i class="fas fa-key fa-fw"></i>
        </label>
-       <input data-v-b56e78ec="" id="uniqueTextInputIdIcon" name="uniqueTextInputIdIcon" required="required" type="text" class="br_1 p-y_2 br_solid flex_auto p-l_4 lh_3  c_black bg_white-0 br_black-3  br-l_0 br-tr_radius br-br_radius shadow_emboss-light"></div>
-       <div class="font-size_down"></div>
-       <a href="" class="flex_none br_radius m-l_2 br_solid br_black-2 br_1 bg_black-1"><i class="far fa-eye p-r_3"></i> show</a>
+       <input data-v-b56e78ec="" id="uniqueTextInputIdIcon" name="uniqueTextInputIdIcon" required="required" type="text" class="br_1 p-y_2 br_solid flex_auto p-l_4 lh_3  c_black bg_white-0 br_black-3  br-l_0 br-tr_radius br-br_radius shadow_emboss-light">
+       <div class="flex_none br_radius m-l_2 br_solid br_black-3 font-size_down br_1 bg_black-1 inline-block undecorated c_black-8 h:bg_black-4 h:c_black flex flex_row justify_center p-x_4"><i class="far fa-eye p-r_3 self_center"></i> <span class="self_center">show</span></div>
     </div>
+       <div class="font-size_down"></div>
+</div>
  
