--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,6 @@ layout: default
 
 
 
-{% if page.tags %}
+<!-- {% if page.tags %}
   <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
-{% endif %}
+{% endif %} -->
