--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
   {% include head.html %}
   <body class="bg_black-1">
     <div class="max-w_90 m_auto bg_white shadow_overlap-light">
-      <section class="flex flex_row p-b_3 br_solid br-b_1 br_black-1">     
-        <div class="logo_primary m-x_4 m-t_n4 w_20 flex_none"></div>
+      <section class="flex flex_column flex_row:md p-b_3 br_solid br-b_1 br_black-1">     
+        <div class="logo_primary m-x_4 m-t_n4 w_20 flex_none self_start m-t_4"></div>
         <div class="flex_auto w_20"><h1 class="m-y_4"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p></div>
       <div class="flex_auto w_40 m_4">
