--- a/_includes/loginButtonDisabled.html
+++ b/_includes/loginButtonDisabled.html
@@ -1,4 +1,4 @@
-<div class="text_right m-b_4">
+<div class="text_center m-b_4">
     <button class="ease_out transition_1 cursor_not-allowed f:outline_none opacity_4 text_center disabled br_none inline-block w_auto font_medium p-y_3 lh_2 p-x_4 font_1 font_2:md  c_white  br_shade-n3 bg_shade  br_radius" label="Log In"><span class="flex block justify_center">
         <i class="fas fa-sign-in-alt p-r_3 lh_2"></i>
         <span>Log In</span></span>
