--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <h1>{{ page.title }}</h1>
-<div class="m_4 texture_medium shadow_bevel-light p_5">
+<div class="m_4 texture_medium shadow_bevel-light p_5 relative">
   <div class="shadow_overlap-light bg_white max-w_55  m-x_auto m-y_5">
     {{content}}
   </div>
